--- a/templates/index.html
+++ b/templates/index.html
@@ -41,10 +41,10 @@
 
         <div class="row">
             <div class="col-lg-12 text-center v-center" style="font-size:39pt;">
-                <a href="#"><i class="icon-google-plus"></i></a>
-                <a href="#"><i class="icon-facebook"></i></a>
+                <a href="https://plus.google.com/u/0/+AxelAlexanderMacnamaraBenites"><i class="icon-google-plus"></i></a>
+                <a href="https://www.facebook.com/axelmarker"><i class="icon-facebook"></i></a>
                 <a href="#"><i class="icon-twitter"></i></a>
-                <a href="#"><i class="icon-github"></i></a>
+                <a href="https://github.com/axeldeveloper/"><i class="icon-github"></i></a>
                 <a href="#"><i class="icon-pinterest"></i></a>
             </div>
         </div>
