--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
                     <div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
                         <input class="form-control input-lg" title="Don't worry. We hate spam, and will not share your email with anyone." placeholder="Enter your email address" type="email" name="email">
                         <span class="input-group-btn">
-                            <button class="btn btn-lg btn-primary" type="submit">GO</button>
+                            <button class="btn btn-lg btn-primary" type="submit">Buscar</button>
                         </span>
                     </div>
                 </form>
