--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
+<!-- app/templates/home/index.html -->
 
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <meta charset="utf-8">
-    <title>Landing Page template</title>
-    <meta name="generator" content="Bootply" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css" rel="stylesheet">
-    <!--[if lt IE 9]>
-      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
-</head>
-
-<body>
+{% extends "base.html" %}
+{% block title %}Home{% endblock %}
+{% block body %}
     <div class="container-full">
         <div class="row">
             <div class="col-lg-12 text-center v-center">
@@ -48,8 +35,6 @@
                 <a href="#"><i class="icon-pinterest"></i></a>
             </div>
         </div>
-        <br>
-        <br>
         <br>
         <br>
         <br>
@@ -88,21 +73,15 @@
             </div>
         </div>
 
-        <div class="row">
-            <div class="col-lg-12">
-                <br>
-                <br>
-                <p class="pull-right"><a href="http://www.bootply.com">Template from Bootply</a> &nbsp; ©Copyright 2014 ACME<sup>TM</sup> Brand.</p>
-                <br>
-                <br>
-            </div>
-        </div>
+
     </div>
 
-    <!-- script references -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
-    <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
-</body>
+{% endblock %}
 
-</html>
+
+
+
+
+
+
+
