--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
             <div class="col-lg-12 text-center v-center">
                 <h1> Bem Vindo </h1>
                 <p class="lead">
-                    Controle de Tarefas
+                    Controle de Tarefas 56
                 </p>
                 <br>
                 <br>
