--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
             <div class="col-lg-12 text-center v-center">
                 <h1> Bem Vindo </h1>
                 <p class="lead">
-                    Controle de Tarefas 567
+                    Controle de Tarefas
                 </p>
                 <br>
                 <br>
                 <br>
-                <form class="col-lg-12" action="{{url_for('prereg')}}" method="POST">
+                <form class="col-lg-12" action="" method="POST">
                     <div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
                         <input class="form-control input-lg" title="Don't worry. We hate spam, and will not share your email with anyone." placeholder="Enter your email address" type="email" name="email">
                         <span class="input-group-btn">
@@ -49,7 +49,11 @@
                     <div class="panel-heading">
                         <h3>Hello.</h3>
                     </div>
-                    <div class="panel-body">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis pharetra varius quam sit amet vulputate. Quisque mauris augue, molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet felis dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. Aliquam in felis sit amet augue.
+                    <div class="panel-body">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                        Duis pharetra varius quam sit amet vulputate. Quisque mauris augue, 
+                        molestie tincidunt condimentum vitae, gravida a libero. Aenean sit amet 
+                        felis dolor, in sagittis nisi. Sed ac orci quis tortor imperdiet venenatis. Duis elementum auctor accumsan. Aliquam in felis sit amet augue.
                     </div>
                 </div>
             </div>
