--- a/templates/tarefa.html
+++ b/templates/tarefa.html
@@ -13,7 +13,7 @@
                 <br>
                 <br>
                 <br>
-                <form class="col-lg-12" action="{{url_for('prereg')}}" method="POST">
+                <form class="col-lg-12" action="" method="POST">
                     <div class="input-group" style="width:340px;text-align:center;margin:0 auto;">
                         <input class="form-control input-lg" title="Don't worry. We hate spam, and will not share your email with anyone." placeholder="Enter your email address" type="email" name="email">
                         <span class="input-group-btn">
