--- a/templates/tipos.html
+++ b/templates/tipos.html
@@ -17,74 +17,37 @@
                 <br>
 
                 <div class="table-responsive">
+
+                        {% for item in rows %}
+                        <div class="well">
+                          <h2>
+                            <a href="">{{item['descricao'] }}</a>
+                            <small>$ {{ item['descricao'] }}</small>
+                          </h2>
+                        </div>
+                      {% endfor %}
+
                     <table class="table table-hover">
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th>Task</th>
-                                <th>Status</th>
-                                <th>Manager</th>
+                                <th>Descrição</th>
                                 <th>Progress</th>
                             </tr>
                         </thead>
                         <tbody>
+                            {% for item in rows %}
                             <tr>
-                                <td>1</td>
-                                <td>Task A</td>
-                                <td><span class="label bg-green">Doing</span></td>
-                                <td>John Doe</td>
+                                <td>{{item['id'] }}</td>
+                                <td> {{item['descricao'] }} </td>                              
                                 <td>
                                     <div class="progress">
                                         <div class="progress-bar bg-green" role="progressbar" aria-valuenow="62" aria-valuemin="0" aria-valuemax="100" style="width: 62%"></div>
                                     </div>
                                 </td>
                             </tr>
-                            <tr>
-                                <td>2</td>
-                                <td>Task B</td>
-                                <td><span class="label bg-blue">To Do</span></td>
-                                <td>John Doe</td>
-                                <td>
-                                    <div class="progress">
-                                        <div class="progress-bar bg-blue" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 40%"></div>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>3</td>
-                                <td>Task C</td>
-                                <td><span class="label bg-light-blue">On Hold</span></td>
-                                <td>John Doe</td>
-                                <td>
-                                    <div class="progress">
-                                        <div class="progress-bar bg-light-blue" role="progressbar" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100" style="width: 72%"></div>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>4</td>
-                                <td>Task D</td>
-                                <td><span class="label bg-orange">Wait Approvel</span></td>
-                                <td>John Doe</td>
-                                <td>
-                                    <div class="progress">
-                                        <div class="progress-bar bg-orange" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100" style="width: 95%"></div>
-                                    </div>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>5</td>
-                                <td>Task E</td>
-                                <td>
-                                    <span class="label bg-red">Suspended</span>
-                                </td>
-                                <td>John Doe</td>
-                                <td>
-                                    <div class="progress">
-                                        <div class="progress-bar bg-red" role="progressbar" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100" style="width: 87%"></div>
-                                    </div>
-                                </td>
-                            </tr>
+                            {% endfor %}
+                            
                         </tbody>
                     </table>
                 </div>
