--- a/templates/base.html
+++ b/templates/base.html
@@ -1,96 +1,190 @@
 <!-- app/templates/base.html -->
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    
     <meta charset="utf-8">
-
-    <title>{{ title }} | Project Dream Team</title>
-    <meta name="generator" content="Bootply" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="content-type" content="text/html; charset=UTF-8">
+    <meta name="description" content="Introducing Lollipop, a sweet new take on Android.">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <title>{{ title }} | Project Dream Team</title>
 
-
-    <!--
-    <link href="{{ url_for('static', filename='css/bootstrap.min.css') }}" rel="stylesheet">
-    -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
-
-
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-
-
-    <!--[if lt IE 9]>
-      <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <!-- Page styles -->
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css">
+ 
     <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet">
+    
+
+    <style>
+        #view-source {
+            position: fixed;
+            display: block;
+            right: 0;
+            bottom: 0;
+            margin-right: 40px;
+            margin-bottom: 40px;
+            z-index: 900;
+        }
+    </style>
 </head>
 
 <body>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
-    <nav class="site-header sticky-top py-1">
-        <div class="container d-flex flex-column flex-md-row justify-content-between">
-            <a class="py-2" href="#">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor"
-                    stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="d-block mx-auto" role="img"
-                    viewBox="0 0 24 24" focusable="false">
-                    <title>Product</title>
-                    <circle cx="12" cy="12" r="10" />
-                    <path
-                        d="M14.31 8l5.74 9.94M9.69 8h11.48M7.38 12l5.74-9.94M9.69 16L3.95 6.06M14.31 16H2.83m13.79-4l-5.74 9.94" />
-                </svg>
-            </a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Tour</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Product</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Features</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Enterprise</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Support</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Pricing</a>
-            <a class="py-2 d-none d-md-inline-block" href="#">Cart</a>
-        </div>
-    </nav>
+        <!-- top -->
+        <div class="android-header mdl-layout__header mdl-layout__header--waterfall">
+            <div class="mdl-layout__header-row">
+               
+                <span class="android-title mdl-layout-title">
+                    <img class="android-logo-image" src="/static/images/android-logo.png">
+                </span>
+                
+                <!-- Add spacer, to align navigation to the right in desktop -->
+                <div class="android-header-spacer mdl-layout-spacer"></div>
+                <div class="android-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
+                    <label class="mdl-button mdl-js-button mdl-button--icon" for="search-field">
+                        <i class="material-icons">search</i>
+                    </label>
+                    <div class="mdl-textfield__expandable-holder">
+                        <input class="mdl-textfield__input" type="text" id="search-field">
+                    </div>
+                </div>
 
-    <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 bg-light">
-        {% block body %}
-        {% endblock %}
-        <div class="push"></div>
-    </div>
+                <!-- Navigation -->
+                <div class="android-navigation-container">
+                    <nav class="android-navigation mdl-navigation">
+                        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Phones</a>
+                        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Tablets</a>
+                        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Wear</a>
+                        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">TV</a>
+                        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Auto</a>
+                        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">One</a>
+                        <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Play</a>
+                    </nav>
+                </div>
 
+                <span class="android-mobile-title mdl-layout-title">
+                    <img class="android-logo-image" src="/static/images/android-logo.png">
+                </span>
 
-    <!-- Rodape padrão-->
-    <div class="container">
-        <hr>
+                <button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
+                    <i class="material-icons">more_vert</i>
+                </button>
 
-        <div class="row">
-            <div class="col-lg-12">
-                <br>
-                <br>
-                <p class="pull-right">
-                    <a href="http://www.bootply.com">API Tarefas</a> &nbsp;
-                    ©Copyright 2017 axel<sup>TM</sup> DevOps.
-                </p>
-                <br>
-                <br>
+                <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
+                    <li class="mdl-menu__item">5.0 Lollipop</li>
+                    <li class="mdl-menu__item">4.4 KitKat</li>
+                    <li disabled class="mdl-menu__item">4.3 Jelly Bean</li>
+                    <li class="mdl-menu__item">Android History</li>
+                </ul>
             </div>
         </div>
+
+        <div class="android-drawer mdl-layout__drawer">
+            <span class="mdl-layout-title">
+                <img class="android-logo-image" src="/static/images/android-logo-white.png">
+            </span>
+            <nav class="mdl-navigation">
+                <a class="mdl-navigation__link" href="">Phones</a>
+                <a class="mdl-navigation__link" href="">Tablets</a>
+                <a class="mdl-navigation__link" href="">Wear</a>
+                <a class="mdl-navigation__link" href="">TV</a>
+                <a class="mdl-navigation__link" href="">Auto</a>
+                <a class="mdl-navigation__link" href="">One</a>
+                <a class="mdl-navigation__link" href="">Play</a>
+                <div class="android-drawer-separator"></div>
+                <span class="mdl-navigation__link" href="">Versions</span>
+                <a class="mdl-navigation__link" href="">Lollipop 5.0</a>
+                <a class="mdl-navigation__link" href="">KitKat 4.4</a>
+                <a class="mdl-navigation__link" href="">Jelly Bean 4.3</a>
+                <a class="mdl-navigation__link" href="">Android history</a>
+                <div class="android-drawer-separator"></div>
+                <span class="mdl-navigation__link" href="">Resources</span>
+                <a class="mdl-navigation__link" href="">Official blog</a>
+                <a class="mdl-navigation__link" href="">Android on Google+</a>
+                <a class="mdl-navigation__link" href="">Android on Twitter</a>
+                <div class="android-drawer-separator"></div>
+                <span class="mdl-navigation__link" href="">For developers</span>
+                <a class="mdl-navigation__link" href="">App developer resources</a>
+                <a class="mdl-navigation__link" href="">Android Open Source Project</a>
+                <a class="mdl-navigation__link" href="">Android SDK</a>
+            </nav>
+        </div>
+
+        <!-- corpo -->
+        <div class="android-content mdl-layout__content">
+            <a name="top"></a>
+            {% block body %} {% endblock %}
+      
+            <footer class="android-footer mdl-mega-footer">
+                <div class="mdl-mega-footer--top-section">
+                    <div class="mdl-mega-footer--left-section">
+                        <button class="mdl-mega-footer--social-btn"></button>
+                        &nbsp;
+                        <button class="mdl-mega-footer--social-btn"></button>
+                        &nbsp;
+                        <button class="mdl-mega-footer--social-btn"></button>
+                    </div>
+                    <div class="mdl-mega-footer--right-section">
+                        <a class="mdl-typography--font-light" href="#top">
+                            Back to Top
+                            <i class="material-icons">expand_less</i>
+                        </a>
+                    </div>
+                </div>
+
+                <div class="mdl-mega-footer--middle-section">
+                    <p class="mdl-typography--font-light">Satellite imagery: © 2014 Astrium, DigitalGlobe</p>
+                    <p class="mdl-typography--font-light">Some features and devices may not be available in all areas</p>
+                </div>
+
+                <div class="mdl-mega-footer--bottom-section">
+                    <a class="android-link android-link-menu mdl-typography--font-light" id="version-dropdown">
+                        Versions
+                        <i class="material-icons">arrow_drop_up</i>
+                     </a>
+                    <ul class="mdl-menu mdl-js-menu mdl-menu--top-left mdl-js-ripple-effect" for="version-dropdown">
+                        <li class="mdl-menu__item">5.0 Lollipop</li>
+                        <li class="mdl-menu__item">4.4 KitKat</li>
+                        <li class="mdl-menu__item">4.3 Jelly Bean</li>
+                        <li class="mdl-menu__item">Android History</li>
+                    </ul>
+                    <a class="android-link android-link-menu mdl-typography--font-light" id="developers-dropdown">
+                        For Developers
+                        <i class="material-icons">arrow_drop_up</i>
+                    </a>
+                    <ul class="mdl-menu mdl-js-menu mdl-menu--top-left mdl-js-ripple-effect" for="developers-dropdown">
+                        <li class="mdl-menu__item">App developer resources</li>
+                        <li class="mdl-menu__item">Android Open Source Project</li>
+                        <li class="mdl-menu__item">Android SDK</li>
+                        <li class="mdl-menu__item">Android for Work</li>
+                    </ul>
+                    <a class="android-link mdl-typography--font-light" href="">Blog</a>
+                    <a class="android-link mdl-typography--font-light" href="">Privacy Policy</a>
+                </div>
+
+            </footer>
+
+        </div>
     </div>
 
+    <a href="" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">topo</a>
+
+   
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+
     <!-- script references 
-     <script src="{{ url_for('static', filename='js/bootstrap.min.js') }}"></script>
+ 
     <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+
     -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+
 </body>
 
 </html>
