--- a/templates/tipos.html
+++ b/templates/tipos.html
@@ -2,69 +2,98 @@
 {% extends "base.html" %}
 {% block title %}Home{% endblock %}
 {% block body %}
-    <div class="p-lg-9 my-0">
+        <style>
+    .mdl-data-table {
+    table-layout:fixed;
+    width:100%; 
+}
+#my-table td, th {
+  width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  -o-text-overflow: ellipsis;
+}
 
-        <div class="page-header">
-            <h1>Lista de Clientes</h1>
-        </div>
+/* unrelated to responsive table css */
+#my-table{
+  margin-top:24px;
+}
+.material-icons {
+  vertical-align: -25%;
+}
+    </style>
+    <main class="android-customized-section mdl-layout--fixed-header" style="border: 1px solid #C00">
+        
+        <section class="android-card-container mdl-grid" id="my-table">   
+            
+            <div class="mdl-layout-spacer"></div>
+
+                <header class = "mdl-layout__header">
+                    <div class = "mdl-layout__header-row">      
+                    <span class = "mdl-layout-title"> Lista de Clientes</span>          
+                    </div>       
+                </header>    
+
+                <main class = "mdl-layout__content">    
+
+                    <div class="mdl-cell mdl-cell--12-col-desktop" style="border: 1px solid #C00"> 
+                        <form action="#">
+                            <div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
+                                <label class="mdl-button mdl-js-button mdl-button--icon" for="sample6">
+                                    <i class="material-icons">search</i>
+                                </label>
+                                <div class="mdl-textfield__expandable-holder">
+                                    <input class="mdl-textfield__input" type="text" id="sample6" value="awqwq">
+                                    <label class="mdl-textfield__label" for="sample-expandable">Expandable Input</label>
+                                </div>
+                            </div>
+
+                        </form>
+                                    
+                    </div>  
 
 
-        <div class="row"> 
+                    <div class="mdl-cell mdl-cell--12-col-desktop mdl-cell--stretch mdl-shadow--2dp">     
+                            
+                        <table class="mdl-data-table mdl-js-data-table mdl-data-table--selectable mdl-shadow--9dp">
+                            <thead class="thead-dark">
+                                <tr>
+                                    <th>#</th>
+                                    <th>Descrição</th>
+                                    <th>Opções</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for item in rows %}
+                                <tr>
+                                    <td>{{item['id'] }}</td>
+                                    <td style="width: 50%;"> {{item['descricao'] }} </td>                                                          
+                                    <td class="actions">
+                                        <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" href="view.html">
+                                            <i class="material-icons">border_color</i>
+                                        </a>
 
-            <div class="col-md-12 m-1" >
-                <div class="input-group ">
-                    <input name="data[search]" class="form-control" id="search" type="text" placeholder="Pesquisar Itens">
-                        <span class="input-group-btn">
-                            <button class="btn btn-primary" type="submit">
-                                <span class="fa fa-search"></span>
-                            </button>
-                        </span>
-                </div>
-            </div> 
-            <div class="col-md-12" >
-                <a href="add.html" class="btn btn-primary pull-left h2">
-                    <i class="fa fa-plus"></i>               
-                </a>
-            </div>   
-              
-            <div class="col-md-12" >
-                <div class="table-responsive-xl">
-                    <table class="table table-hover">
-                        <thead class="thead-dark">
-                            <tr>
-                                <th>#</th>
-                                <th>Descrição</th>
-                                <th>Opções</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for item in rows %}
-                            <tr>
-                                <td>{{item['id'] }}</td>
-                                <td style="width: 70%;"> {{item['descricao'] }} </td>                                                          
-                                <td class="actions">
-                                    <a class="btn btn-primary btn-xs" href="view.html">
-                                        <i class="fa fa-search"></i>
-                                    </a>
-                                    <a class="btn btn-primary btn-xs" href="edit.html">
-                                        <i class="fa fa-edit"></i>
-                                    </a>
-                                    <a class="btn btn-danger btn-xs"  href="#" >
-                                        <i class="fa fa-trash"></i>                                
-                                    </a>
-                                </td>
-                            </tr>
-                            {% endfor %}                         
-                        </tbody>
-                    </table>
-                </div>
-                <a href="{{ url_for('tipos_api') }}">
-                    <input type="button" class="btn btn-primary" value="Voltar"></a>
-            </div>
+                                        
 
-        </div>
+                                        <a class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" href="edit.html">
+                                            <i class="material-icons">delete</i>                                
+                                        </a>
+                                    </td>
+                                </tr>
+                                {% endfor %}                         
+                            </tbody>
+                        </table>
+                        <a href="{{ url_for('tipos_api') }}">
+                            voltar
+                        </a>
+                    </div> 
+                    <div class="mdl-layout-spacer"></div>
+                </main>
+        </section>
+
         <!-- /row -->
-    </div>
+    </main>
     <!-- /container full -->
 
     
